--- a/docs/v3.0.0-migration-guide-en.md
+++ b/docs/v3.0.0-migration-guide-en.md
@@ -12,7 +12,7 @@ Because of so there are some areas to carefully check when applying.
 
 This document will walk you through the [Design Changes](#change-design) and [What to Watch Out for When Upgrading to a New Version](#version-update-notice)
 
-# Version update notice
+# Be careful when updating versions
 #### The following is a very noticeable part of many changes, Detailed changes are described in detail in the [Design Changes](#change-design)
 
 1. The alignment of the chart titles changed from left-aligned to centered, which may be very different from what you original version intended
