--- a/docs/v3.0.0-migration-guide-en.md
+++ b/docs/v3.0.0-migration-guide-en.md
@@ -10,7 +10,7 @@ The biggest change is the visual design change, but the option (axis.rotateTitle
 When upgrading to v3.0.0, there is no big change in function but there are many design changes such as basic line thickness of chart, title position, dot size and so on. 
 Because of so there are some areas to carefully check when applying.
 
-This document will walk you through the [Design Changes](#change-design) and [What to Watch Out for When Upgrading to a New Version](#version-update-notice)
+This document will walk you through the [Design Changes](#change-design) and [What to Watch Out for When Upgrading to a New Version](#be-careful-when-updating-versions)
 
 # Be careful when updating versions
 #### The following is a very noticeable part of many changes, Detailed changes are described in detail in the [Design Changes](#change-design)
