--- a/docs/v3.0.0-migration-guide-kor.md
+++ b/docs/v3.0.0-migration-guide-kor.md
@@ -1,32 +1,32 @@
 
 # 개요
- 차트가 버전 v3.0.0으로 업데이트 되었습니다
+ 차트가 버전 V3.0.0으로 업데이트되었습니다
 
-이번 메이저 업데이트의 목적은 차트의 디자인을 개편하기 위한 업데이트 입니다
+이번 메이저 업데이트의 목적은 차트의 디자인을 개편하기 위한 업데이트입니다
 
 대대적인 디자인 변경으로 기본 스타일이 크게 예뻐졌기 때문에 이제 유저들이 커스텀 테마를 디테일하게 꾸미기 위한 노력을 덜게 되었습니다.
 
-가장 큰 변경은 디자인 변경이지만 디자인이 적용되면서 필요없게된 옵션(axis.rotateTitle)이 제거되었고, 또한 미리 제거 예고되었던 옵션(tooltip.position) 하나가 제거 되었습니다
+가장 큰 변경은 디자인 변경이지만 디자인이 적용되면서 필요 없게 된 옵션(axis.rotateTitle)이 제거되었고, 또한 미리 제거 예고되었던 옵션(tooltip.position) 하나가 제거되었습니다
 
-기존 버전에서 사용중인 부분을 v3.0.0으로 업그레이드시 기능상의 큰 변경은 없지만 차트의 기본적인 선의 두께나 타이틀의 위치, dot의 크기 등 많은 디자인이 변경되었기 때문에 적용 시 주의해서 확인해야 될 부분이 있습니다
+기존 버전에서 사용 중인 부분을 V3.0.0으로 업그레이드 시 기능상의 큰 변경은 없지만 차트의 기본적인 선의 두께나 타이틀의 위치, dot의 크기 등 많은 디자인이 변경되었기 때문에 적용 시 주의해서 확인해야 될 부분이 있습니다
 
-이 문서에서는 어떻게 디자인이 변경되었는지에 대한 [디자인변경](#디자인변경) 부분 설명과 [새로운 버전으로 업그레이드시 주의 해야할 부분](#버전-업데이트시-주의할-부분)을 안내하겠습니다
+이 문서에서는 어떻게 디자인이 변경되었는지에 대한 [디자인변경](#디자인변경) 부분 설명과 [새로운 버전으로 업그레이드 시 주의해야 할 부분](#버전-업데이트시-주의할-부분)을 안내하겠습니다
 
 # 버전 업데이트시 주의할 부분
-#### 아래는 변경된 많은 중에서도 버전 업데이트시 크게 주의해야 할 부분이며, 상세한 변경사항은 [디자인변경](#디자인변경) 항목에서 자세하게 설명합니다
+#### 아래는 변경된 많은 부분 중에서도 버전 업데이트시 크게 주의해야 할 부분이며, 상세한 변경사항은 [디자인변경](#디자인변경) 항목에서 자세하게 설명합니다
 
-1. 차트 타이틀 정렬 위치가 중앙 정렬외서 왼쪽정렬로 변하면서 기존에 의도했던 모습과 많이 틀려 보일 수 있습니다
+1. 차트 타이틀 정렬 위치가 중앙 정렬에서 왼쪽정렬로 변하면서 기존에 의도했던 모습과 많이 달라 보일 수 있습니다
     - chart.title.offsetX 옵션으로 타이틀의 위치를 조정 할 수 있습니다
 2. y축 타이틀 옵션 yAxis.rotateTitle 옵션이 제거되고 기본 위치가 y축 상단으로 바뀌면서 기존 버전의 의도대로 보이지 않을 수 있습니다
 3. pie chart [(show more)](#8-pie-chart)
-    - series.showLabel을 true로 설정시 series.labelAlign 옵션과 관계없이 sereis의 값 레이블이 항상 가운데에 나오도록 변경되면서 기존 버전의 의도처럼 보이지 않을 수 있습니다
+    - series.showLabel을 true로 설정 시 series.labelAlign 옵션과 관계없이 sereis의 값 레이블이 항상 가운데에 나오도록 변경되면서 기존 버전의 의도처럼 보이지 않을 수 있습니다
     - valueLabel의 폰트 크기가 16px로 고정되면서 기존 버전의 의도대로 보이지 않을 수 있습니다
 4. line chart [(show more)](#4-line-chart)
     - line chart의 line 두께가 2px에서 6px로 변경되었고 dot의 사이즈도 같이 5px로 변경되면서 기존 버전의 의도대로 보이지 않을 수 있습니다
-    - 마찬가지로 line차트가 포함된 combo차트의 경우도 마찬가지로 기존 버전과 많이 틀리게 보일 수 있습니다
+    - 마찬가지로 line차트가 포함된 combo차트의 경우도 마찬가지로 기존 버전과 많이 다르게 보일 수 있습니다
 5. area chart [(show more)](#5-area-chart)
     - line 표현의 기본 두께가 2px에서 6px로 변경되었고 dot사이즈가 변경되면서 기존 버전의 의도대로 보이지 않을 수 있습니다
-    - area의 opacity와 기본 상태 표현이 변경되었음으로 기존 버전의 의도대로 보이지 않을 수 있습니다.
+    - area의 opacity와 기본 상태 표현이 변경되었으므로 기존 버전의 의도대로 보이지 않을 수 있습니다.
 
 
 # 디자인변경
@@ -36,7 +36,7 @@
 - chart title 정렬이 가운데 정렬에서 좌측정렬로 변경
 - y축 타이틀 위치가 상단으로 변경
 - x축 타이틀 위치 좌측 정렬로 변경
-- x, y축 선 두께가 더 얇아보이도록 변경
+- x, y축 선 두께가 더 얇아 보이도록 변경
 - legend 영역 체크박스 모양 및 아이콘 모양 변경
 - tooltip 의 기본모양 변경
 - exportMenu 모양 변경
@@ -60,7 +60,7 @@
 
 
 ### 4. line chart
-- 기본 선 두께가 두꺼워 졌습니다 (2px => 6px)
+- 기본 선 두께가 두꺼워졌습니다 (2px => 6px)
 - 기본 dot의 크기와 모양이 변경
 
 | 2.16.x | 3.0.0 |
@@ -73,8 +73,8 @@
 - area의 기본 모양 변경
   - 기본 areaOpacity 가 0.5 에서 1로 변경
 - mouseover시 모양과 애니메이션 효과가 변경
-  - 기본 선 두께가 두꺼워 졌습니다 (2px => 6px)
-  - 마우스 오버시 area영역이 투명하게 변함
+  - 기본 선 두께가 두꺼워졌습니다 (2px => 6px)
+  - 마우스 오버 시 area 영역이 투명하게 변함
   
 | 2.16.x | 3.0.0 |
 | --- | --- |
@@ -101,8 +101,8 @@
 
 ### 8. pie chart
 - pie chart의 series label 상태변경
-  - labelAlign 옵션과 관계없이 sereis의 값 레이블은 항상 가운데에 나오도록 변경(legend 레이블에만 적용됩니다)
-  - labelAlign 옵션이 outer일때 series의 legend 레이블의 색상이 적용되어 나오도록 변경
+  - labelAlign 옵션과 관계없이 series의 값 레이블은 항상 가운데에 나오도록 변경(legend 레이블에만 적용됩니다)
+  - labelAlign 옵션이 outer일 때 series의 legend 레이블의 색상이 적용되어 나오도록 변경
 - mouseover시 효과 변경
 
 | 2.16.x | 3.0.0 |
