--- a/docs/v3.0.0-migration-guide-en.md
+++ b/docs/v3.0.0-migration-guide-en.md
@@ -3,9 +3,9 @@
 
 The purpose of this major update is to redesign the chart.
 
-Because of the big design changes, the basic style has become so special that users are now less eager to customize their custom themes.
+We improved the basic style to be more polished so that users don’t have to customize it.
 
-The biggest change is the visual design change, but the option (axis.rotateTitle) that was no longer needed when the design was applied (axis.rotateTitle) has been removed and deprecated option (tools.position) has been removed.
+The biggest change is a visual design change, two options that are no longer needed are removed, and two options are added.
 
 When upgrading to v3.0.0, there is no big change in function but there are many design changes such as basic line thickness of chart, title position, dot size and so on. 
 Because of so there are some areas to carefully check when applying.
@@ -17,12 +17,12 @@ This document will walk you through the [Design Changes](#change-design) and [Wh
 
 1. The alignment of the chart titles changed from left-aligned to centered, which may be very different from what you original version intended
     - Instead, the (chart.title.offsetX) option can adjust the position of the title
-2. y-axis title option The yAxis.rotateTitle option is removed and the default position changes to the top of the y-axis, which may not be what the old version intended
+2. y-axis title option The `yAxis.rotateTitle` option is removed and the default position changes to the top of the y-axis, which may not be what the old version intended
 3. pie chart [(show more)](#8-pie-chart)
     - When series.showLabel is set to true, the sereis value label is always centered, regardless of the series.labelAlign option, and may not look like the intent of the old version
     - The font size of valueLabel may be fixed at 16px and may not look as intended in the original version
 4. line chart [(show more)](#4-line-chart)
-    - The line thickness of the line chart is changed from 2px to 6px, and the size of the dot is also changed to 5px, which may not look like the intent shown in previous versions
+    - The line thickness of the line chart has been changed from 2px to 6px, and the size of the dot is also changed to 5px, which may not look like the intent shown in previous versions
     - Likewise, combo charts with line charts may look different from previous versions
 5. area chart [(show more)](#5-area-chart)
     - The default thickness of the line representation has been changed from 2px to 6px, and the dot size changed, which may look different from previous versions
@@ -32,8 +32,8 @@ This document will walk you through the [Design Changes](#change-design) and [Wh
 # Change design
 ### 1. Chart common part
 - change chart default color specified in defaultTheme
-- chart title sort changed from center sort to left sort
-- y axis title position changed to top
+- chart title sort has been changed from center sort to left sort
+- y axis title position has been changed to top
 - change to x-axis title position left alignment
 - changed x, y axis line thickness to look thinner
 - change legend area checkbox appearance and icon appearance
@@ -89,7 +89,7 @@ This document will walk you through the [Design Changes](#change-design) and [Wh
 
 
 ### 7. scatter chart
-- default scatter opacity changed from 0.5 to 0.8
+- default scatter opacity has been changed from 0.5 to 0.8
 
 | 2.16.x | 3.0.0 |
 | --- | --- |
@@ -97,7 +97,7 @@ This document will walk you through the [Design Changes](#change-design) and [Wh
 
 
 ### 8. pie chart
-- The series label status of the pie chart has changed
+- The series label status of the pie chart has been changed
   - regardless of the labelAlign option, the sereis value label is always centered (applies only to legend labels)
   - when the labelAlign option is outer, the color of the legend label of the series is changed to be applied
 - change the mouseover effect
@@ -130,7 +130,7 @@ This document will walk you through the [Design Changes](#change-design) and [Wh
 
 
 ### 11. treemap chart
-- The color representation of the series has changed
+- The color representation of the series has been changed
 
 | 2.16.x | 3.0.0 |
 | --- | --- |
@@ -159,4 +159,4 @@ This document will walk you through the [Design Changes](#change-design) and [Wh
 | name | Explanation |
 | --- | --- |
 | yAxis.rotateTitle | The option to rotate the y-axis title has been removed (removed as an option that is not appropriate for the changed design) |
-| tooltip.position | Removed the tooltip.position option that was deprecated (can be replaced with tooltip.offsetX or tooltip.offsetY)|
+| tooltip.position | Removed the `tooltip.position` option that was deprecated (can be replaced with `tooltip.offsetX` or `tooltip.offsetY`)|
