--- a/docs/v3.0.0-migration-guide-en.md
+++ b/docs/v3.0.0-migration-guide-en.md
@@ -18,13 +18,13 @@ This document will walk you through the [Design Changes](#change-design) and [Wh
 1. The alignment of the chart titles changed from left-aligned to centered, which may be very different from what you original version intended
     - Instead, the (chart.title.offsetX) option can adjust the position of the title
 2. y-axis title option The `yAxis.rotateTitle` option is removed and the default position changes to the top of the y-axis, which may not be what the old version intended
-3. Pie chart [(show more)](#8-Pie-chart)
+3. Pie chart [(show more)](#8-pie-chart)
     - When series.showLabel is set to true, the sereis value label is always centered, regardless of the series.labelAlign option, and may not look like the intent of the old version
     - The font size of valueLabel may be fixed at 16px and may not look as intended in the original version
-4. Line chart [(show more)](#4->ine-chart)
+4. Line chart [(show more)](#4->line-chart)
     - The line thickness of the line chart has been changed from 2px to 6px, and the size of the dot is also changed to 5px, which may not look like the intent shown in previous versions
     - Likewise, combo charts with line charts may look different from previous versions
-5. Area chart [(show more)](#5-Area-chart)
+5. Area chart [(show more)](#5-area-chart)
     - The default thickness of the line representation has been changed from 2px to 6px, and the dot size changed, which may look different from previous versions
     - The opacity of the area and its default state representation have changed, which may look defferent from previous versions
 
