--- a/docs/v3.0.0-migration-guide-en.md
+++ b/docs/v3.0.0-migration-guide-en.md
@@ -21,7 +21,7 @@ This document will walk you through the [Design Changes](#change-design) and [Wh
 3. Pie chart [(show more)](#8-pie-chart)
     - When series.showLabel is set to true, the sereis value label is always centered, regardless of the series.labelAlign option, and may not look like the intent of the old version
     - The font size of valueLabel may be fixed at 16px and may not look as intended in the original version
-4. Line chart [(show more)](#4->line-chart)
+4. Line chart [(show more)](#4-line-chart)
     - The line thickness of the line chart has been changed from 2px to 6px, and the size of the dot is also changed to 5px, which may not look like the intent shown in previous versions
     - Likewise, combo charts with line charts may look different from previous versions
 5. Area chart [(show more)](#5-area-chart)
