--- a/docs/v3.0.0-migration-guide-en.md
+++ b/docs/v3.0.0-migration-guide-en.md
@@ -154,8 +154,14 @@ This document will walk you through the [Design Changes](#change-design) and [Wh
 | --- | --- |
 |![2018-03-05 5 13 19](https://user-images.githubusercontent.com/35218826/36963975-93d36fea-2098-11e8-8ad7-23fe4085f74b.png)|![2018-03-05 5 12 37](https://user-images.githubusercontent.com/35218826/36963974-93a45750-2098-11e8-859f-d13b84db798c.png)|
 
+# Option changes
+### Options added
+| name | Explanation |
+| --- | --- |
+| legend.reversed | n Spectrum Legend, change the output order in reverse order. |
+| xAxis.showLabel<br>yAxis.showLabel | Hide or show labels on the x or y axis |
 
-# Options removed
+### Options removed
 | name | Explanation |
 | --- | --- |
 | yAxis.rotateTitle | The option to rotate the y-axis title has been removed (removed as an option that is not appropriate for the changed design) |
