--- a/docs/v3.0.0-migration-guide-en.md
+++ b/docs/v3.0.0-migration-guide-en.md
@@ -158,7 +158,7 @@ This document will walk you through the [Design Changes](#change-design) and [Wh
 ### Options added
 | name | Explanation |
 | --- | --- |
-| legend.reversed | n Spectrum Legend, change the output order in reverse order. |
+| legend.reversed | In Spectrum Legend, change the output order in reverse order. |
 | xAxis.showLabel<br>yAxis.showLabel | Hide or show labels on the x or y axis |
 
 ### Options removed
